--- a/debian/control
+++ b/debian/control
@@ -8,9 +8,13 @@ Uploaders: Sune Vuorela <sune@debian.org>,
            Eshat Cakar <info@eshat.de>,
            Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>,
            Maximiliano Curia <maxy@debian.org>
-Build-Depends: kde-sc-dev-latest (>= 4:4.11),
- cmake, debhelper (>= 9), pkg-kde-tools (>= 0.12),
- kdepimlibs5-dev (>= 4:4.11), docbook-to-man, nepomuk-core-dev (>= 4:4.11)
+Build-Depends: cmake,
+               debhelper (>= 9),
+               docbook-to-man,
+               kde-sc-dev-latest (>= 4:4.11),
+               kdepimlibs5-dev (>= 4:4.11),
+               nepomuk-core-dev (>= 4:4.11),
+               pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.5
 Homepage: http://www.kde.org/
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/kuser.git
@@ -19,7 +23,7 @@ Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/kuser.git
 Package: kuser
 Section: admin
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Suggests: khelpcenter4
 Description: user and group administration tool
  KUser is an application for managing users and groups on your system.
