--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: kuser
 Section: kde
 Priority: optional
-Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
+Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Sune Vuorela <sune@debian.org>,
            Fathi Boudra <fabo@debian.org>,
            Modestas Vainius <modax@debian.org>,
@@ -13,12 +13,11 @@ Build-Depends: cmake,
                docbook-to-man,
                kde-sc-dev-latest (>= 4:4.12),
                kdepimlibs5-dev (>= 4:4.11),
-               nepomuk-core-dev (>= 4:4.11),
                pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.5
 Homepage: http://www.kde.org/
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/kuser.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/kuser.git
+Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/kde-applications/kuser.git/
+Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-applications/kuser.git
 
 Package: kuser
 Section: admin
