--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends: cmake,
                pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.6
 Homepage: http://www.kde.org/
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/kuser.git
+Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/kde-sc/kuser.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/kuser.git
 
 Package: kuser
