--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,8 @@ Build-Depends: cmake (>= 2.8.9~),
                pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.6
 Homepage: http://www.kde.org/
-Vcs-Browser: http://anonscm.debian.org/cgit/kde/kde-applications/kuser.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/applications/kuser.git
+Vcs-Browser: https://anonscm.debian.org/git/kde/kde-applications/kuser.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/applications/kuser.git
 
 Package: kuser
 Section: admin
