--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: cmake (>= 2.8.9~),
                debhelper (>= 9),
                docbook-to-man,
                kde-sc-dev-latest (>= 4:4.12),
+               kdelibs5-dev,
                kdepimlibs5-dev,
                pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.8
